--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,45 @@
-anotacoes.md
-notes.txt
+# =========================
+# Internal documentation (private)
+# =========================
+README_FULL.md
+README_FULL*.md
+
+# =========================
+# Personal / notes
+# =========================
+notes.md
+
+# =========================
+# Python cache / bytecode
+# =========================
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# =========================
+# Virtual environments
+# =========================
+.venv/
+venv/
+env/
+
+# =========================
+# IDE / Editor files
+# =========================
+.vscode/
+.idea/
+
+# =========================
+# OS files
+# =========================
+.DS_Store
+Thumbs.db
+
+# =========================
+# Generated data & outputs
+# =========================
+data/example_results.csv
+outputs/
+*.png
+qc_report.txt
